# liapota.github.io

./: README.md  asset-manifest.json  index.html
Popup/: Popup.js  Popup.scss  Popup.test.js
Popup/ConfirmationTemplate/: ConfirmationTemplate.js  ConfirmationTemplate.scss  index.js
project/backend/blockchain/: Cargo.toml  Dockerfile  README.md  bankchain  tasks.crontab
project/backend/blockchain/api/: Cargo.toml
project/backend/blockchain/api/src/: cookie.rs  handle.rs  lib.rs  main.rs  transactions.rs  user.rs
project/backend/blockchain/blago/: Cargo.toml
project/backend/blockchain/core/: Cargo.toml
project/backend/main/: .gitignore  Dockerfile  Heartbeat.sln  README.md  backend-ci-cd.bat
project/backend/main/Heartbeat.Application/: DependencyInjection.cs  Heartbeat.Application.csproj
project/backend/main/Heartbeat.Domain/: CompanyBonus.cs  CompanyEvent.cs  Team.cs  User.cs
project/backend/main/Heartbeat.Persistence/: ApplicationDbContext.cs  DbInitializer.cs  DependencyInjection.cs  Heartbeat.Persistence.csproj
project/backend/main/Heartbeat.WebAPI/: Dockerfile  Heartbeat.WebAPI.csproj  Program.cs  appsettings.json
project/devops/: docker-compose.yml
project/frontend/: package-lock.json  package.json
project/frontend/public/: index.html
project/frontend/src/: App.js  globalStyles.jsx
project/frontend/src/store/: GlobalStore.js  index.js  shopStore.js  tempUserStore.js  (+4 more)
static/js/: main.37e79181.js  main.37e79181.js.map  main.6efd1327.js  main.6efd1327.js.map  main.7cff040c.js  main.7cff040c.js.map  main.bfce3e78.js  main.bfce3e78.js.map
(+137 files in other folders)
