[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = {version = "0.7.7", features = ["runtime", "array-impls"]}
core = { path = "../core" }
